<resources>
    <string name="app_name">EMS</string>
    <string name="Sign_in">Sign in with App</string>
    <string name="google_sign_in">sign in with google</string>
    <string name="txt_register">creating your account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="Phone_number">enter your phone number</string>

    <string name="continue_txt">Continue</string>
    <string name="title_activity_driver_map">DriverMapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_second">Home Second</string>
    <string name="permission_require">Location permission</string>
    <string name="decline">Decline Ride</string>
    <string name="ambulance">Ambulance</string>
    <string name="Time">5 min</string>
    <string name="distance">1.6 km</string>
    <string name="token_not_found">Token not found</string>
    <string name="decline_failed">Decline is failed</string>
    <string name="decline_Success">You have decline this request</string>
    <string name="Patient_name_show">Aayush Shrestha</string>
    <string name="start_Ride">Start Your Ride</string>
    <string name="patient_not_found">Cannot  find patient nearby</string>
    <string name="accept_failed">Accept failed</string>
    <string name="accept_Success">"Successful acceptancy "</string>
    <string name="time_taken_1">01:25</string>
    <string name="driver_arrived">Driver arrived</string>
    <string name="your_driver_arrived">Your driver has arrived</string>
    <string name="Complete_trip">Complete Trip</string>
    <string name="complete_trip_failed">Failed to complete trip</string>
    <string name="complete_trip_success">You have arrived to your destination, Thank you!!</string>
    <string name="login_txt">LogIn</string>
    <string name="msg_token_fmt">Driver have arrived</string>
</resources>