<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/decline"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:checkedIcon="@drawable/ic_baseline_clear_24"
        app:chipBackgroundColor="@color/black"
        app:chipIconTint="@android:color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_accept"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/type_ambulance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/uber_move"
                    android:text= "@string/ambulance"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center">

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/circularProgressBar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:cpb_background_progressbar_color="@android:color/white"
                        app:cpb_background_progressbar_width="3dp"
                        app:cpb_progress="0"
                        app:cpb_progress_direction="to_right"
                        app:cpb_progress_max="100"
                        app:cpb_progressbar_color="@color/progress_bar_color"
                        app:cpb_progressbar_width="3dp"
                        app:cpb_round_border="false"/>

                    <ImageView
                        android:id="@+id/round_img"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:clickable="false"
                        android:src="@drawable/ic_baseline_person_24"
                        app:tint="@android:color/white" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/rating_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:drawableRight="@drawable/ic_baseline_star_24"
                    android:fontFamily="@font/uber_move"
                    android:text="4.4"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>


            </LinearLayout>

            <TextView
                android:id="@+id/estimate_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/uber_move_bold"
                android:text="@string/Time"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/estimate_distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/uber_move"
                android:text="@string/distance"
                android:textColor="@android:color/white"
                android:textSize="16sp" />



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_start_Ride"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

                <ImageView
                    android:id="@+id/img_start_ride"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_account_circle_24" />

                <TextView
                    android:id="@+id/txt_start_ride_estimate_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/Time"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/uber_move_bold"
                    android:layout_toRightOf="@+id/img_start_ride"/>

                <TextView
                    android:id="@+id/txt_start_ride_estimate_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/distance"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/uber_move_bold"
                    android:layout_toLeftOf="@+id/img_start_ride"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_format_list_bulleted_24" />
            </RelativeLayout>

            <View
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:id="@+id/layout_notify_patient"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/notify_patient_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/uber_move"
                    android:text="@string/time_taken_1"
                    android:textSize="18sp"/>

                <ProgressBar
                    android:id="@+id/progress_notify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="0"
                    android:max="120"
                    android:indeterminate="false"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_phone_msg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_baseline_perm_phone_msg_24" />

                <TextView
                    android:id="@+id/txt_Patient_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/Patient_name_show"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/uber_move_bold"
                    android:textSize="22sp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/img_menu_dot"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_more_vert_24" />

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.kusu.library.LoadingButton
                android:id="@+id/btn_start_ride"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/start_Ride"
                android:textColor="@color/white"
                app:lb_buttonColor="@color/colorPrimaryDark"
                app:lb_isCircular="false"/>

                <com.kusu.library.LoadingButton
                    android:id="@+id/btn_trip_complete"
                    android:enabled="false"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/Complete_trip"
                    android:textColor="@color/white"
                    app:lb_buttonColor="@color/colorPrimaryDark"
                    app:lb_isCircular="false"/>




            </FrameLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>